--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "a memory game",
   "main": "server/app.js",
   "scripts": {
-    "start": "PORT=80 node server/app.js",
+    "start": "NODE_ENV=production PORT=80 node server/app.js",
     "dev": "rollup -c -w",
-    "dev-server": "PORT=8080 nodemon server/app.js"
+    "dev-server": "NODE_ENV=development PORT=8080 nodemon server/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +20,10 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
+    "errorhandler": "^1.5.1",
+    "morgan": "^1.10.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.19",
-    "morgan": "^1.10.0",
     "pug": "^3.0.2"
   }
 }
